--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -2,7 +2,7 @@
 body {
     100%;
     background-color: #f1faee;
-    background-image: url("../img/sky_and_clouds.jpg") !important;
+    background-image: url("../img/drops.jpg") !important;
     background: fixed;
     background-size: 100% 100% !important;
 }
@@ -47,7 +47,7 @@ body {
 #mymodal-body,
 #addFlight-body {
     background-color: #ade8f4;
-    background-image: url("../img/sky_and_clouds.jpg") !important;
+    background-image: url("../img/drops.jpg") !important;
     height: 100%;
     width: 100%;
 }
@@ -59,11 +59,14 @@ body {
 }
 
 #select-airport,
+#select-arrivalAirport,
+#select-departureAirport,
 #select-airline {
     width: 100%;
 }
 
-#date-form-width {
+#date-form-width,
+#date-arrival-width{
     width: 65%;
 }
 
