--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -7,17 +7,74 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="#" th:replace="base :: bootstrap-css"/>
     <link href="#" th:replace="base :: custom-css"/>
-
     <div th:replace="base :: fonts-akaya"></div>
-
-    <title>About us</title>
+    <title>Airports</title>
 </head>
 <body>
-<div th:replace="header :: navigation-bar">
-    header
-</div>
+<section>
+    <div th:replace="header :: navigation-bar">
+        header
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div id="jumbo_index" class="jumbotron">
+            <h1 id="start_flying" class="display-4">"START FLYING"</h1>
+            <p class="lead">"Your wings already exist. All you have to do is fly."</p>
+            <p class="lead">We present ourself, if you wish to read something <b>About us</b></p>
+            <hr class="my-4">
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div class="jumbotron">
+            <div class="controls-row row">
+                <hr>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="card bg-transparent">
+                            <div class="card-body bg-transparent text-white">
+                                <h5 class="card-title"><b>About project</b></h5>
+                                <p class="card-text">This is a project for class <b>JAVA-NATIONAL-05</b>, from <b>Scoala Informala
+                                    de It</b>, in wich present the overall knowledge of programming in Java.
+                                    The tehnologies used are <b>Spring</b>, <b>JPA</b>, <b>Postgresql</b> for back-end, <b>Thymeleaf</b>, <b>Bootstrap</b>
+                                    for front-end. <br>
+                                    The project present a virtual airline portal, in wich we added some airports,
+                                    airlines, and we can navigate through them, finding the designated flights. <br>
+                                    We tried to cover as many knowledge we could in a designated period of time,
+                                    impossed by the mentor, for testing purpose. <br><br>
+                                    Hope you enjoyed the "flight", and we see you soon.
+                                    <br></p>
+                                <a th:href="@{/}" class="btn btn-outline-light">Go to <b>Home</b> page</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card bg-transparent">
+                            <div class="card-body bg-transparent text-white">
+                                <h5 class="card-title">About author</h5>
+                                <p class="card-text">My name is <b>Cosmin</b>, 47 years old, trying to reconvert to a JAVA
+                                    developer carrier. Passionate about tehnologies, and IT, I enrolled my self in
+                                    <b>Scoala Informala de It</b>, for achieving my dream to be a programmer.<br>
+                                    I love the challanges that programming is faceing, the dynamic way of interacting
+                                    with knowledge, the continous search for implementing different tasks. Overall I'm
+                                    very excited and confident that this is my way in my professional life.<br>
+                                    Take care, and please, forgive the simplicity of the project. I try my best to
+                                    improve. <br>
+                                    Best wishies, <b>Cosmin</b></p>
+                                <a th:href="@{/}" class="btn btn-outline-light">Go to <b>Home</b> page</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
-<h1>ceva despre noi</h1>
+
+<footer th:replace="footer::footer-base"></footer>
 
 <script src="#" th:replace="base :: bootstrap-js"></script>
 </body>
