--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -1,45 +1,62 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="#" th:replace="base :: bootstrap-css"/>
-  <link href="#" th:replace="base :: custom-css"/>
-  <div th:replace="base :: fonts-akaya"></div>
-  <title>Airports</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="#" th:replace="base :: bootstrap-css"/>
+    <link href="#" th:replace="base :: custom-css"/>
+    <div th:replace="base :: fonts-akaya"></div>
+    <title>Airports</title>
 </head>
 <body>
 <section>
-  <div th:replace="header :: navigation-bar">
-    header
-  </div>
-</section>
-<section>
-  <div class="container">
-    <div id="jumbo_index" class="jumbotron">
-      <h1 id="start_flying" class="display-4">"START FLYING"</h1>
-      <p class="lead">"Your wings already exist. All you have to do is fly."</p>
-      <p class="lead">Just select your favorite destination, and let us do the search for you.</p>
-      <hr class="my-4">
+    <div th:replace="header :: navigation-bar">
+        header
     </div>
-  </div>
 </section>
 <section>
-  <div class="container">
-    <div class="jumbotron">
-      <div class="controls-row row">
-        <div class="control-group col-md-6">
-          <div class="input-group">
-            <ul th:each="flight : $(listOfSearchedFlights)">
-              <li th:text="${flight.flightNumber}"></li>
-            </ul>
-          </div>
+    <div class="container">
+        <div id="jumbo_index" class="jumbotron">
+            <h1 id="start_flying" class="display-4">"START FLYING"</h1>
+            <p class="lead">"Your wings already exist. All you have to do is fly."</p>
+            <p class="lead">Just select your favorite destination, and let us do the search for you.</p>
+            <hr class="my-4">
         </div>
-      </div>
     </div>
-  </div>
+</section>
+<section>
+    <div class="container">
+        <div class="jumbotron">
+            <div class="controls-row row">
+                <div class="control-group col-md-9">
+                    <div class="input-group">
+                        <p th:text="${airportDto.airportName}"></p>
+                        <p th:text="${airportDto.airportCity}"></p>
+                        <p th:text="${airportDto.airportCountry}"></p>
+                        <p th:text="${airportDto.airportCode}"></p>
+                        <p th:text="${airportDto.latitude}"></p>
+                        <p th:text="${airportDto.longitude}"></p>
+                        <hr>
+                        <table>
+                            <th></th>
+                            <tr th:each="flight : ${listOfSearchedFlights}">
+                                <td th:text="${flight.airline.airlineName + ' (' + flight.airline.airlineCode + ')'}">
+                                    ***
+                                </td>
+                                <td th:text="${flight.flightNumber}"> ***</td>
+                                <td th:text="${flight.departureAirport.airportName}"> ***</td>
+                                <td th:text="${#dates.format(flight.departureDate, 'dd.MM.yyyy HH:mm')}"> ***</td>
+                                <td th:text="${flight.arrivalAirport.airportName}"> ***</td>
+                                <td th:text="${#dates.format(flight.arrivalDate, 'dd.MM.yyyy HH:mm')}"> ***</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 <footer th:replace="footer::footer-base"></footer>
